Comments and misc fixes

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,9 +6,10 @@
 }
 
 <body>
-
+    <!--This is my image-->
     <img src="~/img/horse.jpg" alt="horseback ride" class="center" />
     <br />
+    <!--Hopes for IS 413 section-->
     <h2>Hopes for IS 413:</h2>
     <p class="center">
         The main thing that I hope to be able to come out of this class with is to be a better programmer. I
@@ -17,7 +18,7 @@
         I think this is something that I've lacked in the past but will most definitely help me in the future if I can nail that down.
     </p>
     <br />
-
+    <!--My top jobs wanted section-->
     <h2>My Top jobs wanted:</h2>
     <ul class="wanted-jobs">
         <li>1. Developer (not too picky on what kind yet)</li>
