--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @{
 }
 
+@*I'm not sure what this if for but I was told to put it there so it's whatever*@
+
 @using Assignment2.Controllers
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
 
